Coloring almost done

--- a/popup.html
+++ b/popup.html
@@ -5,8 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dark Mode Toggle</title>
   <style>
-    body { width: 200px; padding: 10px; }
-    button { width: 100%; padding: 10px; }
+    body {
+      min-width: 200px;
+      padding: 10px;
+    }
+    button {
+      width: 100%;
+      padding: 10px;
+      font-size: 16px;
+    }
   </style>
 </head>
 <body>
