--- a/popup.html
+++ b/popup.html
@@ -8,6 +8,7 @@
     body {
       min-width: 200px;
       padding: 10px;
+      background-color: #000000;
     }
     button {
       width: 100%;
