--- a/popup.html
+++ b/popup.html
@@ -5,11 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dark Mode Toggle</title>
   <style>
+
     body {
       min-width: 200px;
       padding: 10px;
-      background-color: #000000;
+      background-color: #1a1a1a;
     }
+
     button {
       width: 100%;
       padding: 10px;
